AdminTeamKick: use x,y,z coordinate selector instead of --all flag, per review feedback
Agent-Logs-Url: https://github.com/BentoBoxWorld/BentoBox/sessions/ee9782ec-6693-42a2-a6e3-d0f6775b1387

Co-authored-by: tastybento <4407265+tastybento@users.noreply.github.com>